# ExpenseManager-API

./: .gitignore  README.md  alembic.ini  pyproject.toml
scripts/: start  start_dev  start_dev.ps1
src/application/common/: dto.py
src/application/common/exceptions/: base.py  db.py
src/application/expense/: dto.py
src/application/expense/commands/: create_expense.py  delete_expense.py  edit_expense.py
src/application/expense/interfaces/: __init__.py  reader.py  repo.py
src/application/expense/queries/: get_between.py  get_by_id.py
src/application/test/commands/: create_test.py
src/infrastructure/: config.py  currency_client.py
src/infrastructure/db/: __init__.py  uow.py
src/infrastructure/db/mappers/: __init__.py  base.py  expense.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/db/migrations/versions/: 2025_04_03_1926-ef64fab91c9d_created_table_expense.py  2025_04_04_0029-13be29089e1b_fixed_expense_updated_at.py  2025_04_04_2203-319a287cf802_deleted_column_expense_updated_at.py  2025_04_04_2213-ce7336cfd9de_expense_created_at_alowed_timezone.py
src/infrastructure/db/models/: expense.py
src/infrastructure/db/repositories/: base.py  expense.py
src/infrastructure/di/: __init__.py
src/infrastructure/mediator/: __init__.py
src/infrastructure/mediator/handlers/: expense.py  test.py
src/presentation/api/: __init__.py
src/presentation/api/controllers/: __init__.py  expense.py  test.py
src/presentation/api/providers/: __init__.py
