[project]
name = "expensemanager-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Жеревчук Сергій",email = "Foxtrotserega@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13.2,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.1,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "didiator[di] (>=0.3.1,<0.4.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "black (>=25.1.0,<26.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "aiohttp (>=3.11.16,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
